--- a/public/styles.css
+++ b/public/styles.css
@@ -438,6 +438,7 @@ textarea.form-field {
 
 /* Contact Form Styles */
 .form-overlay {
+  overflow-y: auto;
   background-color: rgba(255, 255, 255, 0.85);
   backdrop-filter: blur(5px);
   position: fixed;
@@ -446,9 +447,6 @@ textarea.form-field {
   left: 0;
   right: 0;
   z-index: 100;
-  display: flex;
-  justify-content: center;
-  align-content: center;
   visibility: hidden;
   opacity: 0;
   transform: scale(1.2);
@@ -462,6 +460,7 @@ textarea.form-field {
 }
 
 .form-overlay-inner {
+  position: relative;
   max-width: 880px;
   box-shadow: 0px 0px 10px 5px rgba(0, 0, 0, 0.07);
   background-color: #fff;
@@ -469,13 +468,39 @@ textarea.form-field {
   flex: 1;
   align-self: center;
   display: grid;
-  grid-template-columns: 340px 1fr;
+  grid-template-columns: 1fr;
 }
 
 .form-photo {
   order: 1;
   grid-row: 1;
   position: relative;
+  height: 200px;
+}
+
+.form-content {
+  padding: 38px 30px;
+}
+
+@media screen and (min-width: 745px) {
+  .form-overlay {
+    display: flex;
+    justify-content: center;
+    align-content: center;
+  }
+
+  .form-content {
+    padding: 38px 54px;
+    position: relative;
+  }
+
+  .form-overlay-inner {
+    grid-template-columns: 340px 1fr;
+  }
+
+  .form-photo {
+    height: auto;
+  }
 }
 
 .form-photo p {
@@ -511,12 +536,8 @@ textarea.form-field {
   justify-content: end;
 }
 
-.form-content {
-  padding: 38px 54px;
-  position: relative;
-}
-
 .close-form-overlay {
+  z-index: 101;
   position: absolute;
   cursor: pointer;
   top: 0;
@@ -545,4 +566,64 @@ textarea.form-field {
 
 .pet-contact-btn:hover {
   opacity: 1;
+}
+
+.thank-you {
+  opacity: 0;
+  visibility: hidden;
+  z-index: 102;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: #fff;
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  transition: all 0.3s ease-out;
+}
+
+.thank-you--visible {
+  opacity: 1;
+  visibility: visible;
+}
+
+.thank-you p {
+  align-self: center;
+  font-size: 1.4rem;
+}
+
+.thank-you svg {
+  color: rgb(12, 189, 12);
+  position: relative;
+  top: 4px;
+  margin-right: 4px;
+}
+
+.contact-list {
+  width: 100%;
+  border-collapse: collapse;
+}
+
+.contact-list th,
+.contact-list td {
+  padding: 10px;
+  vertical-align: top;
+}
+
+.contact-list th {
+  text-align: left;
+  font-weight: normal;
+  font-size: 0.87rem;
+  color: #7d7d7d;
+  padding: 0 10px;
+}
+
+.contact-list td {
+  font-size: 1rem;
+}
+
+.contact-list tr:nth-child(even) {
+  background-color: #f1f1f1;
 }
