--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -249,14 +249,22 @@
     <div class="form-overlay" style="display: none">
       <div class="form-overlay-inner">
         <form class="form-content">
-          <input type="text" id="name" autocomplete="off" placeholder="Name" />
           <input
+            class="form-field"
+            type="text"
+            id="name"
+            autocomplete="off"
+            placeholder="Name"
+          />
+          <input
+            class="form-field"
             type="text"
             id="email"
             autocomplete="off"
             placeholder="Email Address"
           />
           <input
+            class="form-field"
             type="text"
             id="secret"
             autocomplete="off"
@@ -276,7 +284,23 @@
           <img src="/images/fallback.jpg" />
           <p>Ačiū, kad domitės <strong>Žvėrimi</strong></p>
         </div>
-        <form class="thank-you"></form>
+        <form class="thank-you">
+          <P
+            ><svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="24"
+              height="24"
+              fill="currentColor"
+              class="bi bi-check-circle-fill"
+              viewBox="0 0 16 16"
+            >
+              <path
+                d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0m-3.97-3.03a.75.75 0 0 0-1.08.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-.01-1.05z"
+              />
+            </svg>
+            Ačiū, kad susisiekei.</P
+          >
+        </form>
       </div>
     </div>
 
