Fix of lithuanian language in some places

--- a/views/create-pet.ejs
+++ b/views/create-pet.ejs
@@ -25,14 +25,14 @@
             class="form-field"
             type="text"
             name="name"
-            placeholder="name"
+            placeholder="Vardas"
           />
           <input
             autocomplete="off"
             class="form-field"
             type="text"
             name="birthYear"
-            placeholder="Year born (e.g. 2019)"
+            placeholder="Renginys sukurtas (2019 m.)"
           />
           <select class="form-field" name="species">
             <option>dog</option>
@@ -41,7 +41,7 @@
           <textarea
             class="form-field"
             name="description"
-            placeholder="Description..."
+            placeholder="Aprašymas..."
           ></textarea>
 
           <input class="form-field" id="file-field" type="file" />
