--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -254,14 +254,14 @@
             type="text"
             id="name"
             autocomplete="off"
-            placeholder="Name"
+            placeholder="Vardas"
           />
           <input
             class="form-field"
             type="text"
             id="email"
             autocomplete="off"
-            placeholder="Email Address"
+            placeholder="E-paštas"
           />
           <input
             class="form-field"
