--- a/views/login.ejs
+++ b/views/login.ejs
@@ -28,13 +28,13 @@
             class="form-field"
             type="text"
             name="username"
-            placeholder="Username"
+            placeholder="Vartotojas"
           />
           <input
             class="form-field"
             name="password"
             type="password"
-            placeholder="Password"
+            placeholder="Slaptažodis"
           />
           <button class="our-btn">Prisijungti</button>
         </form>
